--- a/work/LIP_101.html
+++ b/work/LIP_101.html
@@ -44,22 +44,17 @@
                     <li>
                         <span class="tit">사용안내</span>
                         <div class="link-item">
-                            <a href="LUP_001.html">사용처 안내</a>
+                            <a href="LUP_001.html">사용기관 안내</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">평생교육이용권</span>
                         <div class="link-item">
                             <a href="LAP_100.html">평생교육이용권 신청</a>
-                            <a class="hidden" href="#">이의제기 신청</a>
-                            <a href="#">선정 포기 신청</a>
-                            <a href="LAP_400.html">수기 공모 신청</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">우수이용자 신청</span>
-                        <div class="link-item">
                             <a href="LAP_001.html">우수이용자 신청</a>
+                            <a class="hidden" href="#">이의제기 신청</a>
+                            <a href="LAP_300.html">선정 포기 신청</a>
+                            <a href="LAP_400.html">수기 공모 신청</a>
                         </div>
                     </li>
                     <li>
@@ -68,7 +63,7 @@
                             <a href="LNP_001.html">공지사항</a>
                             <a href="LNP_100.html">자료실</a>
                             <a href="LNP_200.html">자주하는질문</a>
-                            <a href="LNP_200.html">질의응답</a>
+                            <a href="LNP_200.html">온라인 상담</a>
                         </div>
                     </li>
                     <li>
@@ -77,7 +72,7 @@
                             <a href="LIP_001.html">개인정보수정</a>
                             <a href="LIP_601.html">개명 및 개번 신청</a>
                             <a href="LIP_100.html">평생교육이용권 신청내역</a>
-                            <a href="#">평생교육이용권 이용내역</a>
+                            <a class="hidden" href="#">평생교육이용권 이용내역</a>
                             <a href="LIP_300.html">교육이수정보</a>
                             <a class="hidden" href="#">이용자 이벤트</a>
                         </div>
@@ -112,16 +107,17 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">사용안내</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LUP_001.html">사용처 안내</a></li>
+                                <li><a href="LUP_001.html">사용기관 안내</a></li>
                             </ul>
                         </div>
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">평생교육이용권</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LAP_001.html">이용권신청</a></li>
+                                <li><a href="LAP_100.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_001.html">우수이용자 신청</a></li>
                                 <li><a href="#" class="hidden">이의제기신청</a></li>
-                                <li><a href="#">선정 취소 신청</a></li>
-                                <li><a href="#">수기 공모 신청</a></li>
+                                <li><a href="LAP_300.html">선정 취소 신청</a></li>
+                                <li><a href="LAP_400.html">수기 공모 신청</a></li>
                             </ul>
                         </div> 
                         <div class="sm-sub-menu">
@@ -130,7 +126,7 @@
                                 <li><a href="LNP_001.html">공지사항</a></li>
                                 <li><a href="LNP_100.html">자료실</a></li>
                                 <li><a href="LNP_200.html">자주하는질문</a></li>
-                                <li><a href="LNP_200.html">질의응답</a></li>
+                                <li><a href="LNP_200.html">온라인 상담</a></li>
                             </ul>
                         </div> 
                         <div class="sm-sub-menu">
@@ -139,7 +135,7 @@
                                 <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
-                                <li><a href="#">평생교육이용권 이용내역</a></li>
+                                <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
                                 <li><a href="#">교육이수정보</a></li>
                                 <li><a class="hidden" href="#">이용자 이벤트</a></li>
                             </ul>
@@ -377,11 +373,11 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th class="txt-l">신청서구분</th>
+                            <th class="txt-l">연계 상태</th>
                             <td class="txt-l">완료 평생교육이용권</td>
                         </tr>
                         <tr>
-                            <th class="txt-l">연계일시</th>
+                            <th class="txt-l">연계 일시</th>
                             <td class="txt-l">2024-10-11</td>
                         </tr>
                         <tr>
@@ -568,54 +564,35 @@
     </div>
     <footer class="wrap">
         <div class="info-content">
-            <div class="family-select-wrap">
+            <div>
+                <ul class="foot-logo">
+                    <li><img src="../images/biz2/logo/footer_logo_local_government.svg" alt="울산광역시 로고"></li>
+                    <li><img src="../images/biz2/logo/footer_logo_2.svg" alt="평생교육이용권 로고"></li>
+                </ul>
+                <address>
+                    <span>대표전화 : 052-120 <br class="footer-show"><span>(평일 09:00~18:00 야간·공휴일 당직실 전환)</span></span>
+                    <span>(44675) 울산광역시 남구 중앙로 201 (신정동)</span>
+                </address>
                 <div class="family-select-lg custom-select-box" >
                     <button class="custom-select-open">관련 사이트</button>
                     <ul class="family-site-list custom-select-list">
-                        <li><a href="#">국가평생교육진흥원 독학학위제</a></li>
-                        <li><a href="#">학점은행제 정보공시제(알리미)</a></li>
-                        <li><a href="#">평생학습계좌제</a></li>
-                        <li><a href="#">학점은행제</a></li>
-                        <li><a href="#">평생학습포털 늘배움</a></li>
-                        <li><a href="#">국가평생진흥원</a></li>
-                        <li><a href="#">교육부</a></li>
-                        <li><a href="#">고용노동부</a></li>
-                        <li><a href="#">한국진흥원</a></li>
-                        <li><a href="#">관련사이트10</a></li>
-                        <li><a href="#">관련사이트11</a></li>
-                        <li><a href="#">관련사이트12</a></li>
-                        <li><a href="#">관련사이트13</a></li>
-                        <li><a href="#">관련사이트14</a></li>
+                        <li><a href="https://www.moe.go.kr/main.do?s=moe" target="_blank">교육부</a></li>
+                        <li><a href="https://www.nile.or.kr/index.do" target="_blank">국가평생교육진흥원</a></li>
+                        <li><a href="https://www.all.go.kr" target="_blank">온국민평생배움터</a></li>
+                        <li><a href="https://www.cb.or.kr/creditbank/base/cdMain.do" target="_blank">학점은행제</a></li>
+                        <li><a href="https://www.all.go.kr" target="_blank">평생학습계좌제</a></li>
+                        <li><a href="https://www.cbinfo.or.kr" target="_blank">학점은행제 정보공시제(알리미)</a></li>
+                        <li><a href="https://bdes.nile.or.kr:444/nile/base/bdesMain.do" target="_blank">국가평생교육진흥원 독학학위제</a></li>
                     </ul>
                 </div>
             </div>
-            <span class="footer-logo"><span class="blind">평생교육이용권</span></span>
-            <address>
-                <span class="txt"><span>(04520)</span><span>서울특별시 중구 청계천로 14 (무교동77)</span></span>
-                <span class="tel"><span class="txt-bold">대표전화</span><span><span class="txt-bold">1600-3005</span> (평일 09시~18시)</span></span>
-            </address>
             <div class="link-area">
-                <div class="link-box">
-                    <a href="#">이용약관</a>
-                    <a href="#" class="on">개인정보처리방침</a>
-                    <a href="#">저작권정책</a>
-                    <a href="#">이메일무단수집거부</a>
-                </div>
-                <span class="copy">
-                    COPYRIGHT 2024. NATIONAL INSTITUTE FOR LIFELONG EDUCATION. ALL RIGHTS
-                    RESERVED.
-                </span>
-                <div class="support-box">
-                    <a href="http://www.moe.go.kr" target="_blank">
-                        <img src="../images/biz2/logo/footer_familylogo_1.png" alt="교육부">
-                    </a>
-                    <a href="http://www.nile.or.kr" target="_blank">
-                        <img src="../images/biz2/logo/footer_familylogo_2.svg" alt="국가평생교육진흥원">
-                    </a>
-                    <a href="http://wa.or.kr/board/list.asp?BoardID=0006" target="_blank">
-                        <img src="../images/biz2/logo/footer_familylogo_3.png" alt="한국장애인단체총연합회 한국웹접근성인증평가원 웹 접근성 우수사이트 인증마크 새창으로 열림">
-                    </a>
-                    <img src="../images/biz2/logo/footer_familylogo_4.png" alt="청렴세상">
+                <div>
+                    <div class="link-box">
+                        <a href="LTP_001.html">이용약관</a>
+                        <a href="LTP_002.html" class="col-deepblue">개인정보처리방침</a>
+                    </div>
+                    <span class="copy"> COPYRIGHT 2024. NATIONAL INSTITUTE FOR LIFELONG EDUCATION. ALL RIGHTS RESERVED.</span>
                 </div>
             </div>
         </div>
