--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -230,7 +230,7 @@
                         </span>
                         <span class="ico"></span>
                     </a>
-                    <a href="IMP_001.html" class="more-link-login">
+                    <a href="IMP_001.html" target="_blank" class="more-link-login">
                         <span class="letter-spacing-10">
                             사용기관<br class="lg-only">로그인<br class="sm-show-800">
                             및 등록 신청
@@ -427,29 +427,27 @@
                     <li><img src="../images/biz2/logo/footer_logo_2.svg" alt="평생교육이용권 로고"></li>
                 </ul>
                 <address>
-                    <span>대표전화 : 052-120 (해울이콜센터 평일 09:00~18:00 야간·공휴일 당직실 전환)</span>
+                    <span>대표전화 : 052-120 <br class="footer-show"><span>(평일 09:00~18:00 야간·공휴일 당직실 전환)</span></span>
                     <span>(44675) 울산광역시 남구 중앙로 201 (신정동)</span>
                 </address>
                 <div class="family-select-lg custom-select-box" >
                     <button class="custom-select-open">관련 사이트</button>
                     <ul class="family-site-list custom-select-list">
-                        <li><a href="#">국가평생교육진흥원 독학학위제</a></li>
-                        <li><a href="#">학점은행제 정보공시제(알리미)</a></li>
-                        <li><a href="#">평생학습계좌제</a></li>
-                        <li><a href="#">학점은행제</a></li>
-                        <li><a href="#">평생학습포털 늘배움</a></li>
-                        <li><a href="#">국가평생진흥원</a></li>
-                        <li><a href="#">교육부</a></li>
-                        <li><a href="#">고용노동부</a></li>
-                        <li><a href="#">한국진흥원</a></li>
+                        <li><a href="https://www.moe.go.kr/main.do?s=moe" target="_blank">교육부</a></li>
+                        <li><a href="https://www.nile.or.kr/index.do" target="_blank">국가평생교육진흥원</a></li>
+                        <li><a href="https://www.all.go.kr" target="_blank">온국민평생배움터</a></li>
+                        <li><a href="https://www.cb.or.kr/creditbank/base/cdMain.do" target="_blank">학점은행제</a></li>
+                        <li><a href="https://www.all.go.kr" target="_blank">평생학습계좌제</a></li>
+                        <li><a href="https://www.cbinfo.or.kr" target="_blank">학점은행제 정보공시제(알리미)</a></li>
+                        <li><a href="https://bdes.nile.or.kr:444/nile/base/bdesMain.do" target="_blank">국가평생교육진흥원 독학학위제</a></li>
                     </ul>
                 </div>
             </div>
-            <div>
-                <div class="link-area">
+            <div class="link-area">
+                <div>
                     <div class="link-box">
-                        <a href="#">이용약관</a>
-                        <a href="#" class="col-blue">개인정보처리방침</a>
+                        <a href="LTP_001.html">이용약관</a>
+                        <a href="LTP_002.html" class="col-deepblue">개인정보처리방침</a>
                     </div>
                     <span class="copy"> COPYRIGHT 2024. NATIONAL INSTITUTE FOR LIFELONG EDUCATION. ALL RIGHTS RESERVED.</span>
                 </div>
