--- a/work/LGP_001.html
+++ b/work/LGP_001.html
@@ -49,7 +49,7 @@
                         <span class="tit">평생교육이용권</span>
                         <div class="link-item">
                             <a href="LAP_100.html">평생교육이용권 신청</a>
-                            <a href="LAP_001.html">우수이용자 신청</a>
+                            <a href="LAP_002.html">우수이용자 신청</a>
                             <a class="hidden" href="#">이의제기 신청</a>
                             <a href="LAP_300.html">선정 포기 신청</a>
                             <a href="LAP_400.html">수기 공모 신청</a>
@@ -112,7 +112,7 @@
                             <span class="sm-menu-tit">평생교육이용권</span>
                             <ul class="sm-sub-list">
                                 <li><a href="LAP_100.html">평생교육이용권신청</a></li>
-                                <li><a href="LAP_001.html">우수이용자 신청</a></li>
+                                <li><a href="LAP_002.html">우수이용자 신청</a></li>
                                 <li><a href="#" class="hidden">이의제기신청</a></li>
                                 <li><a href="LAP_300.html">선정 취소 신청</a></li>
                                 <li><a href="LAP_400.html">수기 공모 신청</a></li>
@@ -237,7 +237,9 @@
                     <div class="page-header">
                         <h2 class="page-header-tit">평생교육이용권 사용하기</h2>
                     </div>
-                    <div class="use-ticket">
+                    <img src="../images/biz2/screenshot/LGP002.png" alt="">
+
+                    <!-- <div class="use-ticket">
                         <div class="blue-box bg">
                             <div class="conts-header">
                                 <h3>평생교육이용권 사용방법</h3>                            
@@ -411,7 +413,7 @@
                                 <li>2. 제16조의3제3항을 위반하여 평생교육이용권을 판매ㆍ대여하거나 부정한 방법으로 사용한 자</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
