--- a/work/LTP_001.html
+++ b/work/LTP_001.html
@@ -50,7 +50,7 @@
                         <span class="tit">평생교육이용권</span>
                         <div class="link-item">
                             <a href="LAP_100.html">평생교육이용권 신청</a>
-                            <a href="LAP_001.html">우수이용자 신청</a>
+                            <a href="LAP_002.html">우수이용자 신청</a>
                             <a class="hidden" href="#">이의제기 신청</a>
                             <a href="LAP_300.html">선정 포기 신청</a>
                             <a href="LAP_400.html">수기 공모 신청</a>
@@ -113,7 +113,7 @@
                             <span class="sm-menu-tit">평생교육이용권</span>
                             <ul class="sm-sub-list">
                                 <li><a href="LAP_100.html">평생교육이용권신청</a></li>
-                                <li><a href="LAP_001.html">우수이용자 신청</a></li>
+                                <li><a href="LAP_002.html">우수이용자 신청</a></li>
                                 <li><a href="#" class="hidden">이의제기신청</a></li>
                                 <li><a href="LAP_300.html">선정 취소 신청</a></li>
                                 <li><a href="LAP_400.html">수기 공모 신청</a></li>
@@ -158,6 +158,9 @@
             <h2 class="page-header-tit">이용약관</h2>
         </div>
         <div class="contents contest">
+            <img src="../images/biz2/screenshot/LTP001-01.png" alt="" style="margin: 40px auto;">
+            <img src="../images/biz2/screenshot/LTP001-02.png" alt="" style="margin-bottom: 40px;">
+            <img src="../images/biz2/screenshot/LTP001-03.png" alt="">
         </div>
     </div>
     <footer class="wrap">
