0205 12시 45분 업데이트

--- a/work/ILP_003.html
+++ b/work/ILP_003.html
@@ -578,8 +578,9 @@
                 </div>
             </div>
         </footer>
+        <!-- 20250205 :: max-width값 변경, colgroup width값 변경 -->
     <div class="layer-pop" data-pop="busynum-guide" >
-        <div class="layer-content" style="--max-width: 840px">
+        <div class="layer-content" style="--max-width: 1200px">
             <div class="layer-scroll">
                 <span class="title">사업자등록번호 안내</span>
                 <div class="info-area busynum-guide">
@@ -595,12 +596,12 @@
                     <div class="com-view-table">
                         <table>
                             <colgroup>
-                                <col style="width: 135px">
+                                <col style="width: 160px">
                                 <col style="width: auto">
                                 <col style="width: 90px">
-                                <col style="width: 110px">
+                                <col style="width: 140px">
+                                <col style="width: 140px">
                                 <col style="width: 100px">
-                                <col style="width: 80px">
                             </colgroup>
                             <thead>
                                 <tr>
