--- a/work/ILP_030.html
+++ b/work/ILP_030.html
@@ -437,16 +437,17 @@
                     </tr>
                     <tr>
                         <th class="txt-l must-type">기관 운영강좌 유형</th>
+                        
                         <td class="type-wrap">
                             <div class="chk-write row-gap">
                                 <!-- 20250131 :: 텍스트 필드 추가 -->
                                 <div class="chk-box">
-                                    <input type="checkbox" id="chk-15">
+                                    <input type="checkbox" id="chk-15" checked>
                                     <label for="chk-15">학력보완교육</label>
                                     <input type="text">
                                 </div>
                                 <div class="chk-box">
-                                    <input type="checkbox" id="chk-16">
+                                    <input type="checkbox" id="chk-16" >
                                     <label for="chk-16">성인 문해교육</label>
                                     <!-- 20250131 :: placeholder 추가 -->
                                     <input type="text" placeholder="강좌 종류 입력" />
