--- a/work/INP_200.html
+++ b/work/INP_200.html
@@ -84,14 +84,14 @@
         <div class="tab-area">  
             <ul class="tab-list">
                 <li role="tab" aria-selected="true" aria-controls="tab-1" data-tab="tab-1">
-                    <a href="#tab-1">자주하는 질문</a>
+                    <a class="show" href="#tab-1">자주하는 질문</a>
                 </li>
                 <li role="tab" aria-selected="false" aria-controls="tab-2" data-tab="tab-2">
                     <a href="#tab-2">온라인 상담</a>
                 </li>
             </ul>
             <div class="tab-conts-wrap">
-                <div id="tab-1" role="tab-panel" class="tab-cont show">
+                <div id="tab-1" role="tab-panel" class="tab-cont">
                     <div class="page-header">
                         <h2 class="page-header-tit">자주하는 질문</h2>
                     </div>            
@@ -241,7 +241,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="tab-2" role="tab-panel" class="tab-cont">
+                <div id="tab-2" role="tab-panel" class="tab-cont" style="display: none;">
                     <div class="page-header">
                         <h2 class="page-header-tit">온라인 상담</h2>
                     </div>            
