--- a/work/LAP_301.html
+++ b/work/LAP_301.html
@@ -64,7 +64,7 @@
                         <div class="link-item">
                             <a href="LNP_001.html">공지사항</a>
                             <a href="LNP_100.html">자료실</a>
-                            <a href="LNP_200.html">자주하는질문</a>
+                            <a href="LNP_200.html">자주하는 질문</a>
                             <a href="LNP_200.html">온라인 상담</a>
                         </div>
                     </li>
@@ -72,7 +72,7 @@
                         <span class="tit">마이페이지</span>
                         <div class="link-item">
                             <a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a>
+                            <a href="LIP_600.html">개명 및 개번 신청</a>
                             <a href="LIP_100.html">평생교육이용권 신청내역</a>
                             <a class="hidden" href="#">평생교육이용권 이용내역</a>
                             <a href="LIP_300.html">교육이수정보</a>
@@ -115,10 +115,10 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">평생교육이용권</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LAP_100.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_100.html">평생교육이용권 신청</a></li>
                                 <li><a href="LAP_002.html">우수이용자 신청</a></li>
                                 <li><a href="#" class="hidden">이의제기신청</a></li>
-                                <li><a href="LAP_300.html">선정 취소 신청</a></li>
+                                <li><a href="LAP_300.html">선정포기 신청</a></li>
                                 <li><a href="LAP_400.html">수기공모 신청</a></li>
                             </ul>
                         </div> 
@@ -127,7 +127,7 @@
                             <ul class="sm-sub-list">
                                 <li><a href="LNP_001.html">공지사항</a></li>
                                 <li><a href="LNP_100.html">자료실</a></li>
-                                <li><a href="LNP_200.html">자주하는질문</a></li>
+                                <li><a href="LNP_200.html">자주하는 질문</a></li>
                                 <li><a href="LNP_200.html">온라인 상담</a></li>
                             </ul>
                         </div> 
@@ -135,10 +135,10 @@
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
                                 <li><a href="LIP_001.html">개인정보수정</a></li>
-                                <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_600.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
-                                <li><a href="#">교육이수정보</a></li>
+                                <li><a href="LIP_300.html">교육이수정보</a></li>
                                 <li><a class="hidden" href="#">이용자 이벤트</a></li>
                             </ul>
                         </div>
@@ -398,7 +398,7 @@
                 <ul class="bullet-list">
                     <li>평생교육이용권 사용금액이 0원인 대상자만 이용권 이용자 선정 취소신청이 가능합니다. 이용권 사용금액이 발생한 경우, 해지가 불가하오니 확인 후 신청 바랍니다.</li>
                     <li>이용권 선정 취소 기간(2022-01-06~2022-03-31) 내 '취소신청' 시, 차년도 패널티가 적용되지 않습니다.</li>
-                    <li>선정 취소 신청자는 당해년도 평생교육이용권 재신청이 불가합니다.</li>
+                    <li>선정포기 신청자는 당해년도 평생교육이용권 재신청이 불가합니다.</li>
                     <li>취소 신청서 제출 후, 취소 신청 및 변경은 불가하오니 신중하게 검토, 제출하여 주시기 바랍니다.</li>
                 </ul>
             </div>
