--- a/work/LIP_100.html
+++ b/work/LIP_100.html
@@ -25,7 +25,7 @@
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
-            <!-- <a href="#" class="log-info">                
+            <!-- <a href="#" class="log-info">          
                 <span class="log-info-txt">로그아웃</span>
             </a> -->
             <!-- 20250204 :: 로그인 전 텍스트 추가 -->
@@ -65,7 +65,7 @@
                         <div class="link-item">
                             <a href="LNP_001.html">공지사항</a>
                             <a href="LNP_100.html">자료실</a>
-                            <a href="LNP_200.html">자주하는질문</a>
+                            <a href="LNP_200.html">자주하는 질문</a>
                             <a href="LNP_200.html">온라인 상담</a>
                         </div>
                     </li>
@@ -73,7 +73,7 @@
                         <span class="tit">마이페이지</span>
                         <div class="link-item">
                             <a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a>
+                            <a href="LIP_600.html">개명 및 개번 신청</a>
                             <a href="LIP_100.html">평생교육이용권 신청내역</a>
                             <a class="hidden" href="#">평생교육이용권 이용내역</a>
                             <a href="LIP_300.html">교육이수정보</a>
@@ -110,28 +110,17 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">사용안내</span>
                             <ul class="sm-sub-list">
-<<<<<<< HEAD
-                                <li><a href="LUP_001.html">사용처 안내</a></li>
-=======
                                 <li><a href="LUP_001.html">사용기관 안내</a></li>
->>>>>>> 413ebb8e139770f2cae6a891d1ae086c93218f12
                             </ul>
                         </div>
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">평생교육이용권</span>
                             <ul class="sm-sub-list">
-<<<<<<< HEAD
-                                <li><a href="LAP_001.html">이용권신청</a></li>
-                                <li><a href="#" class="hidden">이의제기신청</a></li>
-                                <li><a href="#">선정 취소 신청</a></li>
-                                <li><a href="#">수기공모 신청</a></li>
-=======
-                                <li><a href="LAP_100.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_100.html">평생교육이용권 신청</a></li>
                                 <li><a href="LAP_002.html">우수이용자 신청</a></li>
                                 <li><a href="#" class="hidden">이의제기신청</a></li>
-                                <li><a href="LAP_300.html">선정 취소 신청</a></li>
+                                <li><a href="LAP_300.html">선정포기 신청</a></li>
                                 <li><a href="LAP_400.html">수기공모 신청</a></li>
->>>>>>> 413ebb8e139770f2cae6a891d1ae086c93218f12
                             </ul>
                         </div> 
                         <div class="sm-sub-menu">
@@ -139,26 +128,18 @@
                             <ul class="sm-sub-list">
                                 <li><a href="LNP_001.html">공지사항</a></li>
                                 <li><a href="LNP_100.html">자료실</a></li>
-                                <li><a href="LNP_200.html">자주하는질문</a></li>
-<<<<<<< HEAD
-                                <li><a href="LNP_200.html">질의응답</a></li>
-=======
+                                <li><a href="LNP_200.html">자주하는 질문</a></li>
                                 <li><a href="LNP_200.html">온라인 상담</a></li>
->>>>>>> 413ebb8e139770f2cae6a891d1ae086c93218f12
                             </ul>
                         </div> 
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
                                 <li><a href="LIP_001.html">개인정보수정</a></li>
-                                <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_600.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
-<<<<<<< HEAD
-                                <li><a href="#">평생교육이용권 이용내역</a></li>
-=======
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
->>>>>>> 413ebb8e139770f2cae6a891d1ae086c93218f12
-                                <li><a href="#">교육이수정보</a></li>
+                                <li><a href="LIP_300.html">교육이수정보</a></li>
                                 <li><a class="hidden" href="#">이용자 이벤트</a></li>
                             </ul>
                         </div>
