--- a/work/PGP_001.html
+++ b/work/PGP_001.html
@@ -74,7 +74,7 @@
         <div class="tab-area">
             <ul class="tab-list">
                 <li role="tab" aria-selected="true" aria-controls="tab-1" data-tab="tab-1">
-                    <a href="#tab-1">평생교육이용권이란?</a>
+                    <a class="show" href="#tab-1">평생교육이용권이란?</a>
                 </li>
                 <li role="tab" aria-selected="false" aria-controls="tab-2" data-tab="tab-2" >
                     <a href="#tab-2">평생교육이용권 사용하기</a>
@@ -125,7 +125,7 @@
                         <h3>우수이용자</h3>
                     </div>
                 </div>
-                <div id="tab-2" role="tab-panel" class="tab-cont">
+                <div id="tab-2" role="tab-panel" class="tab-cont" style="display: none;">
                     <div class="page-header">
                         <h2 class="page-header-tit">이용권 사용방법</h2>
                     </div>
