--- a/work/IGP_001.html
+++ b/work/IGP_001.html
@@ -84,7 +84,7 @@
         <div class="tab-area">
             <ul class="tab-list">
                 <li role="tab" aria-selected="true" aria-controls="tab-1" data-tab="tab-1">
-                    <a href="LGP_001.html?#tab-1"><span>평생교육이용권이란?</span></a>
+                    <a class="show" href="LGP_001.html?#tab-1"><span>평생교육이용권이란?</span></a>
                 </li>
                 <li role="tab" aria-selected="false" aria-controls="tab-2" data-tab="tab-2">
                     <a href="LGP_001.html?#tab-2"><span>평생교육이용권 사용하기</span></a>
@@ -234,7 +234,7 @@
                         </button>
                     </div>
                 </div>
-                <div id="tab-2" role="tab-panel" class="tab-cont">
+                <div id="tab-2" role="tab-panel" class="tab-cont" style="display: none;">
                     <div class="info-tit-box">
                         <h2 class="info-tit">평생교육이용권 사용방법</h2>
                         <div class="info-box sub-txt">
