--- a/work/IIP_300.html
+++ b/work/IIP_300.html
@@ -127,15 +127,15 @@
                 <table>
                     <caption>학습자 정보 테이블</caption>
                     <colgroup>
-                        <col style="width:10%;">
-                        <col style="width:12%;">
-                        <col style="width:auto;">
-                        <col style="width:22%">
-                        <col style="width:12%;">                                
-                        <col style="width:10%;">
-                        <col style="width:9%;">
-                        <col style="width:7%;">
-                        <col style="width:10%;">
+                        <col style="width: 100px;">
+                        <col style="width: 180px;">
+                        <col style="width: 160px;">
+                        <col style="width: auto">
+                        <col style="width: 140px;">                                
+                        <col style="width: 100px;">
+                        <col style="width: 140px;">                                
+                        <col style="width: 72px;">
+                        <col style="width: 100px;">
                     </colgroup>
                     <thead>
                         <tr>
@@ -158,7 +158,7 @@
                             <td>2024-01-01 ~ 2024-12-12</td>
                             <td>서울시 광진구</td>
                             <td>홍길*</td>
-                            <td>00.01.**</td>
+                            <td>2024-01-**</td>
                             <td>1일</td>
                             <td>이수중</td>
                         </tr>
@@ -169,7 +169,7 @@
                             <td>2024-01-01 ~ 2024-12-12</td>
                             <td>서울시 광진구</td>
                             <td>홍길*</td>
-                            <td>00.01.**</td>
+                            <td>2024-01-**</td>
                             <td>1일</td>
                             <td>이수중</td>
                         </tr>
