--- a/work/LGP_001.html
+++ b/work/LGP_001.html
@@ -63,7 +63,7 @@
                         <div class="link-item">
                             <a href="LNP_001.html">공지사항</a>
                             <a href="LNP_100.html">자료실</a>
-                            <a href="LNP_200.html">자주하는질문</a>
+                            <a href="LNP_200.html">자주하는 질문</a>
                             <a href="LNP_200.html">온라인 상담</a>
                         </div>
                     </li>
@@ -71,7 +71,7 @@
                         <span class="tit">마이페이지</span>
                         <div class="link-item">
                             <a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a>
+                            <a href="LIP_600.html">개명 및 개번 신청</a>
                             <a href="LIP_100.html">평생교육이용권 신청내역</a>
                             <a class="hidden" href="#">평생교육이용권 이용내역</a>
                             <a href="LIP_300.html">교육이수정보</a>
@@ -114,10 +114,10 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">평생교육이용권</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LAP_100.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_100.html">평생교육이용권 신청</a></li>
                                 <li><a href="LAP_002.html">우수이용자 신청</a></li>
                                 <li><a href="#" class="hidden">이의제기신청</a></li>
-                                <li><a href="LAP_300.html">선정 취소 신청</a></li>
+                                <li><a href="LAP_300.html">선정포기 신청</a></li>
                                 <li><a href="LAP_400.html">수기공모 신청</a></li>
                             </ul>
                         </div> 
@@ -126,7 +126,7 @@
                             <ul class="sm-sub-list">
                                 <li><a href="LNP_001.html">공지사항</a></li>
                                 <li><a href="LNP_100.html">자료실</a></li>
-                                <li><a href="LNP_200.html">자주하는질문</a></li>
+                                <li><a href="LNP_200.html">자주하는 질문</a></li>
                                 <li><a href="LNP_200.html">온라인 상담</a></li>
                             </ul>
                         </div> 
@@ -134,10 +134,10 @@
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
                                 <li><a href="LIP_001.html">개인정보수정</a></li>
-                                <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_600.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
-                                <li><a href="#">교육이수정보</a></li>
+                                <li><a href="LIP_300.html">교육이수정보</a></li>
                                 <li><a class="hidden" href="#">이용자 이벤트</a></li>
                             </ul>
                         </div>
@@ -159,7 +159,7 @@
         <div class="tab-area">
             <ul class="tab-list">
                 <li role="tab" aria-selected="true" aria-controls="tab-1" data-tab="tab-1">
-                    <a href="LGP_001.html?#tab-1"><span>평생교육이용권이란?</span></a>
+                    <a class="show" href="LGP_001.html?#tab-1"><span>평생교육이용권이란?</span></a>
                 </li>
                 <li role="tab" aria-selected="false" aria-controls="tab-2" data-tab="tab-2">
                     <a href="LGP_001.html?#tab-2"><span>평생교육이용권 사용하기</span></a>
@@ -308,7 +308,7 @@
                         </button>
                     </div>
                 </div>
-                <div id="tab-2" role="tab-panel" class="tab-cont">
+                <div id="tab-2" role="tab-panel" class="tab-cont" style="display: none;">
                     <div class="info-tit-box">
                         <h2 class="info-tit">평생교육이용권 사용방법</h2>
                         <div class="info-box sub-txt">
@@ -421,8 +421,8 @@
                                 <li class="use-rule use-rule02">
                                     <b>평생교육이용권 사용기관으로 등록된 교육기관에서 개설하는 교육강좌 수강료*(해당 강좌 교재비 포함**)에 사용할 수 있습니다.</b>
                                     <span>
-                                        <span class="bullet">2025년에 개설(시작)하는 평생교육 강좌에 한해 결제</span>
-                                        <span class="bullet">교재를 포함하여 수강료를 결제하는 경우에만 가능(교재만 구매 불가)</span>
+                                        <span>* 2025년에 개설(시작)하는 평생교육 강좌에 한해 결제</span>
+                                        <span>** 교재를 포함하여 수강료를 결제하는 경우에만 가능(교재만 구매 불가)</span>
                                     </span>
                                 </li>
                                 <li class="use-rule use-rule03">
