--- a/work/LIP_101.html
+++ b/work/LIP_101.html
@@ -65,7 +65,7 @@
                         <div class="link-item">
                             <a href="LNP_001.html">공지사항</a>
                             <a href="LNP_100.html">자료실</a>
-                            <a href="LNP_200.html">자주하는질문</a>
+                            <a href="LNP_200.html">자주하는 질문</a>
                             <a href="LNP_200.html">온라인 상담</a>
                         </div>
                     </li>
@@ -73,7 +73,7 @@
                         <span class="tit">마이페이지</span>
                         <div class="link-item">
                             <a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a>
+                            <a href="LIP_600.html">개명 및 개번 신청</a>
                             <a href="LIP_100.html">평생교육이용권 신청내역</a>
                             <a class="hidden" href="#">평생교육이용권 이용내역</a>
                             <a href="LIP_300.html">교육이수정보</a>
@@ -116,10 +116,10 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">평생교육이용권</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LAP_100.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_100.html">평생교육이용권 신청</a></li>
                                 <li><a href="LAP_002.html">우수이용자 신청</a></li>
                                 <li><a href="#" class="hidden">이의제기신청</a></li>
-                                <li><a href="LAP_300.html">선정 취소 신청</a></li>
+                                <li><a href="LAP_300.html">선정포기 신청</a></li>
                                 <li><a href="LAP_400.html">수기공모 신청</a></li>
                             </ul>
                         </div> 
@@ -128,7 +128,7 @@
                             <ul class="sm-sub-list">
                                 <li><a href="LNP_001.html">공지사항</a></li>
                                 <li><a href="LNP_100.html">자료실</a></li>
-                                <li><a href="LNP_200.html">자주하는질문</a></li>
+                                <li><a href="LNP_200.html">자주하는 질문</a></li>
                                 <li><a href="LNP_200.html">온라인 상담</a></li>
                             </ul>
                         </div> 
@@ -136,10 +136,10 @@
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
                                 <li><a href="LIP_001.html">개인정보수정</a></li>
-                                <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_600.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
-                                <li><a href="#">교육이수정보</a></li>
+                                <li><a href="LIP_300.html">교육이수정보</a></li>
                                 <li><a class="hidden" href="#">이용자 이벤트</a></li>
                             </ul>
                         </div>
@@ -290,9 +290,9 @@
                             <th class="txt-l">가입자</th>
                             <td class="txt-l">
                                 <div class="flex-ac chk-box">
-                                    <input type="checkbox" name="01" id="01" />
+                                    <input type="checkbox" name="01" id="01" disabled />
                                     <label for="01">본인</label>
-                                    <input type="checkbox" name="02" id="02" />
+                                    <input type="checkbox" name="02" id="02" disabled />
                                     <label for="02">본인 외</label>
                                 </div>
                             </td>
@@ -303,9 +303,9 @@
                             <th class="txt-l">가입 구분</th>
                             <td class="txt-l">
                                 <div class="flex-ac chk-box">
-                                    <input type="checkbox" name="03" id="03" />
+                                    <input type="checkbox" name="03" id="03" disabled />
                                     <label for="03">직장</label>
-                                    <input type="checkbox" name="04" id="04" />
+                                    <input type="checkbox" name="04" id="04" disabled />
                                     <label for="04">지역 외</label>
                                 </div>
                             </td>
@@ -476,14 +476,14 @@
                     </tbody>
                 </table>
             </div>
-            <ul class="bullet-list asterisk-list">
-                <li class="col-red">지정된 증빙자료 외 타 서류 첨부 시 추가 검증 불가.</li>
-                <li>표시된 서류는 신청자 본인이 건강보험 피부양자로 등록되어 있는 경우에 한하여 제출</li>
-                <li>pdf 또는 jpg 파일만 첨부가 가능합니다.</li>
-                <li>첨부된 파일은 저장 버튼 클릭 시, 한번에 저장됩니다.</li>
-            </ul>
-            <div class="btns-bottom">
-                <button type="button" class="btns bg-blue">저장</button>
+            <div class="list-btn-box">
+                <ul class="bullet-list asterisk-list mg-0">
+                    <li class="col-red">지정된 증빙자료 외 타 서류 첨부 시 추가 검증 불가.</li>
+                    <li>* 표시된 서류는 신청자 본인이 건강보험 피부양자로 등록되어 있는 경우에 한하여 제출</li>
+                    <li>pdf 또는 jpg 파일만 첨부가 가능합니다.</li>
+                    <li>첨부된 파일은 저장 버튼 클릭 시, 한번에 저장됩니다.</li>
+                </ul>
+                <button type="button" class="btns bg-blue">첨부파일 모두 저장</button>
             </div>
             <div class="conts-header">
                 <h3>평생학습계좌 연계</h3>
@@ -497,7 +497,7 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th class="txt-l">평생학습계좌에 평생교육방처 사용 결과를 등록하시겠습니까?</th>
+                            <th class="txt-l">평생학습계좌에 평생교육이용권 사용 결과를 등록하시겠습니까?</th>
                             <td class="txt-l">아니오</td>
                         </tr>
                     </tbody>
@@ -618,7 +618,7 @@
                                     <td>3</td>
                                 </tr>
                                 <tr>
-                                    <th class="txt-c">가구원수</th>
+                                    <th class="txt-c">가입구분</th>
                                     <td>
                                         <div class="radio-wrap">
                                             <div class="radio-box">
