--- a/work/LIP_500.html
+++ b/work/LIP_500.html
@@ -281,7 +281,7 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th class="txt-l">평생학습계좌에 평생교육방처 사용 결과를 등록하시겠습니까?</th>
+                            <th class="txt-l">평생학습계좌에 평생교육이용권 사용 결과를 등록하시겠습니까?</th>
                             <td>아니오</td>
                         </tr>
                     </tbody>
