--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -27,9 +27,9 @@
                 <span class="log-info-txt">로그아웃</span>
             </a> -->
             <!-- 20250204 :: 로그인 전 텍스트 추가 -->
-            <!-- <a href="#" class="log-info">
+            <a href="#" class="log-info">
                 <span class="log-info-txt">로그인</span>
-            </a> -->            
+            </a>            
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -253,7 +253,7 @@
                     </a>
                     <a href="LNP_200.html" class="more-link-qna">
                         <span class="more-link-one">
-                            온라인 상담
+                            자주하는 질문
                         </span>
                         <span class="ico"></span>
                     </a>
