--- a/work/LNP_002.html
+++ b/work/LNP_002.html
@@ -204,16 +204,18 @@
                         </tr>
                         <tr>
                             <th scope="row" class="txt-l">첨부</th>
-                            <td class="add-file">
-                                <!--파일첨부-->
-                                <!-- <label for="avatar">
-                                    <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg" />
-                                </label> -->
-                                <!--첨부된 파일-->
-                                <div class="attached-file">
-                                    시스템 공지 안내문 
-                                </div>   
-                                <button type="button" class="btns btn-download"><span>다운로드</span></button>    
+                            <td>
+                                <div class="add-file">
+                                    <!--파일첨부-->
+                                    <!-- <label for="avatar">
+                                        <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg" />
+                                    </label> -->
+                                    <!--첨부된 파일-->
+                                    <div class="attached-file">
+                                        시스템 공지 안내문 
+                                    </div>   
+                                    <button type="button" class="btns btn-download"><span>다운로드</span></button>    
+                                </div>
                             </td>
                         </tr>
                     </tbody>
