--- a/work/LNP_200.html
+++ b/work/LNP_200.html
@@ -367,9 +367,9 @@
                                     <input type="text" id="search-bar">
                                     <button type="button" class="btn-search">검색</button>
                                 </div>
-                                <button type="button" class="btns layer-btn bg-blue lg-only">등록</button>
+                                <button type="button" class="btns layer-btn bg-blue lg-only">상담</button>
                             </div>
-                            <button type="button" class="btns layer-btn bg-blue sm-show-800">등록</button>
+                            <button type="button" class="btns layer-btn bg-blue sm-show-800">상담</button>
                         </div>
                         <div class="com-view-table com-list-table lg-only">
                             <table>
@@ -423,7 +423,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="table-list sm-show-800">
+                        <div class="table-list online-cs sm-show-800">
                             <ul>
                                 <li><a href="#">
                                     <p><strong class="list-title">평생교육이용권 유형 문의</strong></p>
