--- a/work/LMP_002.html
+++ b/work/LMP_002.html
@@ -23,9 +23,9 @@
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
-            <!-- <a href="#" class="log-info">                
+            <a href="#" class="log-info">                
                 <span class="log-info-txt">로그아웃</span>
-            </a> -->
+            </a>
             <!-- 20250204 :: 로그인 전 텍스트 추가 -->
             <!-- <a href="#" class="log-info">
                 <span class="log-info-txt">로그인</span>
@@ -90,7 +90,6 @@
                         <a href="#" class="txt-bold">로그인</a>
                         <!-- 로그인 후 -->
                         <!-- <p class="sm-info-user">
-                            
                             <span class="user-name txt-bold">김국바</span>님 환영합니다
                         </p> -->
                         <button class="sm-close ico">
@@ -101,7 +100,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">사업안내</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LGP_001.html">평생교육이용권이란?</a></li>
+                                <li><a href="LGP_001.html">평생교육<br>이용권이란?</a></li>
                                 <li><a href="LGP_001.html">평생교육이용권 사용하기</a></li>
                             </ul>
                         </div>
